# Exchange_dashboard

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: bitcoin.jsx  cac40.css  cac40.jsx  global100.jsx  sp500.jsx
