[package]
name = "trading-dashboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trading_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"     
    #   gestion des fichier.env
reqwest = { version = "0.12", features = ["json"] } 
    #   simplifie l'utilisation des API par serialisation. Appel async non bloquant (utile suivant l'application)
tokio = { version = "1", features = ["full"] }
    # entré et sortie async, necessaire pour les app async rust
    
